# mt-butterfly

./: .env.example  .gitignore  NEW_PLAN.md  README.md  opencode.json  pyproject.toml  requirements.txt
app/: auth.py  cli.py  config.py  database.py  main.py  models.py
app/migrations/: env.py
app/migrations/versions/: 0001_initial_schema.py  0002_add_timeout_minutes.py  0003_add_working_dir.py
app/routers/: chat.py  tasks.py
app/services/: email.py  opencode.py  scheduler.py
app/skills/: send_email.md  youtube_transcript.md
app/static/: api.js  app.js  chat.js  style.css  tasks.js
app/templates/: base.html  chat.html  tasks.html
app/tools/: gmail.py  youtube.py
extras/: com.mt-butterfly.plist
tests/: conftest.py  test_auth.py  test_channels.py  test_email.py  test_opencode.py  test_tasks.py  test_websocket.py
